--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!--MainPage navigation List-->
@@ -52,14 +53,14 @@
     <!--colorBox + button-->
     <main>
       <!-- Section1 -->
-      <section>
+      <section class="banner">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
         <!--Bloc of Benefits--> 
         <!-- Section2 -->
       <section>
-        <h2>Title</h2>
+        <!-- <h2>Title</h2> -->
         <ul>
           <!--first-->
           <li>
@@ -115,7 +116,7 @@
         </ul>
       </section>
         <!--Our Team-->
-      <section>
+      <section class="team">
           <!-- Section4 -->
           <h2>Our Team</h2>
           <!--TeamOrder-->
@@ -148,7 +149,7 @@
       </section>
     </main>
     <!--Footer-->
-    <footer>
+    <footer class="footer">
         <a href="./index.html">
             WedStudio
         </a>
