--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href=".//css/styles.css">
 </head>
 <body>
     <!--header-->
@@ -49,12 +50,91 @@
           </address>
     </Header>
     <main>
+      <!-- list of nav.buttoms -->
+      <ul>
+        <li>
+          <button type="button">All</button>
+        </li
+        <li>
+          <button type="button">Web Site</button>
+        </li>
+        <li>
+          <button type="button">App</button>
+        </li>
+        <li>
+          <button type="button">Design</button>
+        </li>
+        <li>
+          <button type="button">Marketing</button>
+        </li>
+      </ul>
+      <!-- first block of portfolio -->
         <section>
-
-        
+          <ul>
+            <li>
+              <img src=".//images/images_portfolio/Banking App Interface Concept.jpg" alt="Banking App Interface Concept" width="360"
+              height="300">
+              <h3>Banking App Interface Concept</h3>
+              <p>App</p>
+            </li>
+            <li>
+              <img src=".//images/images_portfolio/Cashless Payment.jpg" alt="Cashless Payment" width="360"
+              height="300">
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src=".//images/images_portfolio/Meditaion App.jpg" alt="Meditaion App" width="360"
+              height="300">
+              <h3>Meditaion App</h3>
+              <p>App</p>
+            </li>
+          </ul>
+          <!-- second block of portfolio -->
+          <ul>
+            <li>
+              <img src=".//images/images_portfolio/Taxi Service.jpg" alt="Taxi Service" width="360"
+              height="300">
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img src=".//images/images_portfolio/Screen Illustrations.jpg" alt="Screen Illustrations" width="360"
+              height="300">
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </li>
+            <li>
+              <img src=".//images/images_portfolio/Online Courses.jpg" alt="Online Courses" width="360"
+              height="300">
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </li>
+          </ul>
+          <!-- third block of portfolio -->
+          <ul>
+            <li>
+              <img src=".//images/images_portfolio/Instagram Stories Concept.jpg" alt="Instagram Stories Concept" width="360"
+              height="300">
+              <h3>Instagram Stories Concept</h3>
+              <p>Design</p>
+            </li>
+            <li>
+              <img src=".//images/images_portfolio/Organic Food.jpg" alt="Organic Food" width="360"
+              height="300">
+              <h3>Organic Food</h3>
+              <p>Web Site</p>
+            </li>
+            <li>
+              <img src=".//images/images_portfolio/Fresh Coffee.jpg" alt="Fresh Coffee" width="360"
+              height="300">
+              <h3>Fresh Coffee</h3>
+              <p>Web Site</p>
+            </li>
+          </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a href="./index.html">
             WedStudio
         </a>
