--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a>
           </li>
           <li>
-            <a href="./index.html">
+            <a href="./portfolio.html">
               Portfolio
             </a>
           </li>
