--- a/portfolio.html
+++ b/portfolio.html
@@ -10,23 +10,23 @@
     <!--header-->
     <Header>
         <nav>
-            <a href="./index.html">
+            <a href="./portfolio.html">
               WedStudio
             </a>
             <ul>
               <!--FooterNavigation-->
               <li>
-                <a href="./index.html">
+                <a href="./portfolio.html">
                   Studio
                 </a>
               </li>
               <li>
-                <a href="./index.html">
+                <a href="./portfolio.html">
                   Portfolio
                 </a>
               </li>
               <li>
-                <a href="./index.html">
+                <a href="./portfolio.html">
                   Contacts
                 </a>
               </li>
