--- a/portfolio.html
+++ b/portfolio.html
@@ -72,64 +72,76 @@
         <section>
           <ul>
             <li>
-              <img src=".//images/images_portfolio/Banking App Interface Concept.jpg" alt="Banking App Interface Concept" width="360"
-              height="300">
-              <h3>Banking App Interface Concept</h3>
-              <p>App</p>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Banking App Interface Concept.jpg" alt="Banking App Interface Concept" width="360"
+                height="300">
+                <h2>Banking App Interface Concept</h2>
+                <p>App</p>
+              </a>
             </li>
             <li>
-              <img src=".//images/images_portfolio/Cashless Payment.jpg" alt="Cashless Payment" width="360"
-              height="300">
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Cashless Payment.jpg" alt="Cashless Payment" width="360"
+                height="300">
+                <h2>Cashless Payment</h2>
+                <p>Marketing</p>
+              </a>
             </li>
             <li>
-              <img src=".//images/images_portfolio/Meditaion App.jpg" alt="Meditaion App" width="360"
-              height="300">
-              <h3>Meditaion App</h3>
-              <p>App</p>
-            </li>
-          </ul>
-          <!-- second block of portfolio -->
-          <ul>
-            <li>
-              <img src=".//images/images_portfolio/Taxi Service.jpg" alt="Taxi Service" width="360"
-              height="300">
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Meditaion App.jpg" alt="Meditaion App" width="360"
+                height="300">
+                <h2>Meditaion App</h2>
+                <p>App</p>
+              </a>
             </li>
             <li>
-              <img src=".//images/images_portfolio/Screen Illustrations.jpg" alt="Screen Illustrations" width="360"
-              height="300">
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Taxi Service.jpg" alt="Taxi Service" width="360"
+                height="300">
+                <h2>Taxi Service</h2>
+                <p>Marketing</p>
+              </a>
             </li>
             <li>
-              <img src=".//images/images_portfolio/Online Courses.jpg" alt="Online Courses" width="360"
-              height="300">
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
-            </li>
-          </ul>
-          <!-- third block of portfolio -->
-          <ul>
-            <li>
-              <img src=".//images/images_portfolio/Instagram Stories Concept.jpg" alt="Instagram Stories Concept" width="360"
-              height="300">
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Screen Illustrations.jpg" alt="Screen Illustrations" width="360"
+                height="300">
+                <h2>Screen Illustrations</h2>
+                <p>Design</p>
+              </a>
             </li>
             <li>
-              <img src=".//images/images_portfolio/Organic Food.jpg" alt="Organic Food" width="360"
-              height="300">
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Online Courses.jpg" alt="Online Courses" width="360"
+                height="300">
+                <h2>Online Courses</h2>
+                <p>Marketing</p>
+              </a>
             </li>
             <li>
-              <img src=".//images/images_portfolio/Fresh Coffee.jpg" alt="Fresh Coffee" width="360"
-              height="300">
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Instagram Stories Concept.jpg" alt="Instagram Stories Concept" width="360"
+                height="300">
+                <h2>Instagram Stories Concept</h2>
+                <p>Design</p>
+              </a>
+            </li>
+            <li>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Organic Food.jpg" alt="Organic Food" width="360"
+                height="300">
+                <h2>Organic Food</h2>
+                <p>Web Site</p>
+              </a>
+            </li>
+            <li>
+              <a href="./portfolio.html">
+                <img src=".//images/images_portfolio/Fresh Coffee.jpg" alt="Fresh Coffee" width="360"
+                height="300">
+                <h2>Fresh Coffee</h2>
+                <p>Web Site</p>
+              </a>
             </li>
           </ul>
         </section>
