--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
-  <body>
+  <body class="body">
     <!--MainPage navigation List-->
     <header>
       <nav>
-        <a href="./index.html">
-          WedStudio
+        <a href="./index.html" class="logo">
+          <span class="color-logo">Web</span>Studio
         </a>
         <ul>
           <!--FooterNavigation-->
-          <li>
+          <li class="footer-nav">
             <a href="./index.html">
               Studio
             </a>
           </li>
-          <li>
+          <li class="footer-nav">
             <a href="./portfolio.html">
               Portfolio
             </a>
           </li>
-          <li>
+          <li class="footer-nav">
             <a href="./index.html">
               Contacts
             </a>
@@ -38,12 +39,12 @@
         <!--Footer Contact List-->
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">
+            <a href="mailto:info@devstudio.com" class="contatcs">
               info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+110001111111">
+            <a href="tel:+110001111111" class="contatcs">
               +11 (000) 111-11-11
             </a>
           </li>
@@ -54,7 +55,7 @@
     <main>
       <!-- Section1 -->
       <section class="banner">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
         <!--Bloc of Benefits--> 
@@ -150,8 +151,8 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-        <a href="./index.html">
-            WedStudio
+        <a href="./index.html" class="logo">
+          <span class="color-logo">Web</span>Studio
         </a>
       <p>
         Increase the flow of customers and sales for your business with digital
