--- a/portfolio.html
+++ b/portfolio.html
@@ -1,31 +1,36 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect"
+    href="https://fonts.gstatic.com" crossorigin><link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href=".//css/styles.css">
-</head>
+  </head>
 <body>
     <!--header-->
     <Header>
         <nav>
-            <a href="./portfolio.html">
-              WedStudio
+            <a href="./index.html" class="logo">
+              <span class="color-logo">Web</span>Studio
             </a>
             <ul>
               <!--FooterNavigation-->
-              <li>
+              <li class="footer-nav">
                 <a href="./portfolio.html">
                   Studio
                 </a>
               </li>
-              <li>
+              <li class="footer-nav">
                 <a href="./portfolio.html">
                   Portfolio
                 </a>
               </li>
-              <li>
+              <li class="footer-nav">
                 <a href="./portfolio.html">
                   Contacts
                 </a>
@@ -37,12 +42,12 @@
             <!--Footer Contact List-->
             <ul>
               <li>
-                <a href="mailto:info@devstudio.com">
+                <a href="mailto:info@devstudio.com" class="contatcs">
                   info@devstudio.com
                 </a>
               </li>
               <li>
-                <a href="tel:+110001111111">
+                <a href="tel:+110001111111" class="contatcs">
                   +11 (000) 111-11-11
                 </a>
               </li>
@@ -54,9 +59,9 @@
       <ul>
         <li>
           <button type="button">All</button>
-        </li
+        </li>
         <li>
-          <button type="button">Web Site</button>
+          <button type="button">WebSite</button>
         </li>
         <li>
           <button type="button">App</button>
@@ -75,7 +80,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Banking App Interface Concept.jpg" alt="Banking App Interface Concept" width="360"
                 height="300">
-                <h2>Banking App Interface Concept</h2>
+                <h3>Banking App Interface Concept</h3>
                 <p>App</p>
               </a>
             </li>
@@ -83,7 +88,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Cashless Payment.jpg" alt="Cashless Payment" width="360"
                 height="300">
-                <h2>Cashless Payment</h2>
+                <h3>Cashless Payment</h3>
                 <p>Marketing</p>
               </a>
             </li>
@@ -91,7 +96,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Meditaion App.jpg" alt="Meditaion App" width="360"
                 height="300">
-                <h2>Meditaion App</h2>
+                <h3>Meditaion App</h3>
                 <p>App</p>
               </a>
             </li>
@@ -99,7 +104,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Taxi Service.jpg" alt="Taxi Service" width="360"
                 height="300">
-                <h2>Taxi Service</h2>
+                <h3>Taxi Service</h3>
                 <p>Marketing</p>
               </a>
             </li>
@@ -107,7 +112,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Screen Illustrations.jpg" alt="Screen Illustrations" width="360"
                 height="300">
-                <h2>Screen Illustrations</h2>
+                <h3>Screen Illustrations</h3>
                 <p>Design</p>
               </a>
             </li>
@@ -115,7 +120,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Online Courses.jpg" alt="Online Courses" width="360"
                 height="300">
-                <h2>Online Courses</h2>
+                <h3>Online Courses</h3>
                 <p>Marketing</p>
               </a>
             </li>
@@ -123,7 +128,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Instagram Stories Concept.jpg" alt="Instagram Stories Concept" width="360"
                 height="300">
-                <h2>Instagram Stories Concept</h2>
+                <h3>Instagram Stories Concept</h3>
                 <p>Design</p>
               </a>
             </li>
@@ -131,7 +136,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Organic Food.jpg" alt="Organic Food" width="360"
                 height="300">
-                <h2>Organic Food</h2>
+                <h3>Organic Food</h3>
                 <p>Web Site</p>
               </a>
             </li>
@@ -139,7 +144,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Fresh Coffee.jpg" alt="Fresh Coffee" width="360"
                 height="300">
-                <h2>Fresh Coffee</h2>
+                <h3>Fresh Coffee</h3>
                 <p>Web Site</p>
               </a>
             </li>
@@ -147,8 +152,8 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html">
-            WedStudio
+        <a href="./index.html" class="logo">
+          <span class="color-logo">Web</span>Studio
         </a>
       <p>
         Increase the flow of customers and sales for your business with digital
