--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         </a>
         <ul>
           <!--FooterNavigation-->
-          <li class="footer-nav">
+          <li class="footer-link">
             <a href="./index.html">
               Studio
             </a>
           </li>
-          <li class="footer-nav">
+          <li class="footer-link">
             <a href="./portfolio.html">
               Portfolio
             </a>
           </li>
-          <li class="footer-nav">
+          <li class="footer-link">
             <a href="./index.html">
               Contacts
             </a>
@@ -39,12 +39,12 @@
         <!--Footer Contact List-->
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="contatcs">
+            <a href="mailto:info@devstudio.com" class="contatc-link">
               info@devstudio.com
             </a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="contatcs">
+            <a href="tel:+110001111111" class="contatc-link">
               +11 (000) 111-11-11
             </a>
           </li>
@@ -56,41 +56,41 @@
       <!-- Section1 -->
       <section class="banner">
         <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="mainpage-button">Order Service</button>
       </section>
         <!--Bloc of Benefits--> 
         <!-- Section2 -->
       <section>
         <!-- <h2>Title</h2> -->
-        <ul>
+        <ul class="benefits-list">
           <!--first-->
-          <li>
-            <h3>Strategy</h3>
-            <p>
+          <li class="benefits-point">
+            <h3 class="section-subtitle">Strategy</h3>
+            <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <!--Second-->
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-point">
+            <h3 class="section-subtitle">Punctuality</h3>
+            <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <!--Third-->
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-point">
+            <h3 class="section-subtitle">Diligence</h3>
+            <p class="section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <!--fourth-->
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-point">
+            <h3 class="section-subtitle">Technologies</h3>
+            <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -99,7 +99,7 @@
       </section>
           <!--What are we doing-->
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <!-- section3 -->
         <ul>
           <!--FirstTypeOfWork-->
@@ -119,32 +119,32 @@
         <!--Our Team-->
       <section class="team">
           <!-- Section4 -->
-          <h2>Our Team</h2>
+          <h2 class="section-title">Our Team</h2>
           <!--TeamOrder-->
           <ul>
           <!--Teammate1-->
           <li>
             <img src="./images/tomfordteam.jpg" alt="teammate" width="264"/>
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-subtitle">Mark Guerrero</h3>
+            <p class="section-text">Product Designer</p>
           </li>
           <!--Teammate2-->
           <li>
               <img src="./images/marcguerreroteam.jpg" alt="teammate" width="264"/>
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
+              <h3 class="section-subtitle">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
           </li>
           <!--Teammate3-->
           <li>
               <img src="./images/camilagarciateam.jpg" alt="teammate" width="264"/>
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
+              <h3 class="section-subtitle">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
           </li>
           <!--Teammate4-->
           <li>
               <img src="./images/danielwilsonteam.jpg" alt="teammate" width="264"/>
               <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
+              <p class="section-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -154,7 +154,7 @@
         <a href="./index.html" class="logo">
           <span class="color-logo">Web</span>Studio
         </a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
          marketing & growth solutions.
       </p>
