--- a/portfolio.html
+++ b/portfolio.html
@@ -20,17 +20,17 @@
             </a>
             <ul>
               <!--FooterNavigation-->
-              <li class="footer-nav">
+              <li class="footer-link">
                 <a href="./portfolio.html">
                   Studio
                 </a>
               </li>
-              <li class="footer-nav">
+              <li class="footer-link">
                 <a href="./portfolio.html">
                   Portfolio
                 </a>
               </li>
-              <li class="footer-nav">
+              <li class="footer-link">
                 <a href="./portfolio.html">
                   Contacts
                 </a>
@@ -42,12 +42,12 @@
             <!--Footer Contact List-->
             <ul>
               <li>
-                <a href="mailto:info@devstudio.com" class="contatcs">
+                <a href="mailto:info@devstudio.com" class="contatc-link">
                   info@devstudio.com
                 </a>
               </li>
               <li>
-                <a href="tel:+110001111111" class="contatcs">
+                <a href="tel:+110001111111" class="contatc-link">
                   +11 (000) 111-11-11
                 </a>
               </li>
@@ -55,97 +55,97 @@
           </address>
     </Header>
     <main>
-      <!-- list of nav.buttoms -->
-      <ul>
-        <li>
-          <button type="button">All</button>
-        </li>
-        <li>
-          <button type="button">WebSite</button>
-        </li>
-        <li>
-          <button type="button">App</button>
-        </li>
-        <li>
-          <button type="button">Design</button>
-        </li>
-        <li>
-          <button type="button">Marketing</button>
-        </li>
-      </ul>
-      <!-- first block of portfolio -->
-        <section>
+      <section>
+          <!-- list of nav.buttoms -->
+          <ul>
+            <li>
+              <button type="button" class="selection-button">All</button>
+            </li>
+            <li>
+              <button type="button" class="selection-button">WebSite</button>
+            </li>
+            <li>
+              <button type="button" class="selection-button">App</button>
+            </li>
+            <li>
+              <button type="button" class="selection-button">Design</button>
+            </li>
+            <li>
+              <button type="button" class="selection-button">Marketing</button>
+            </li>
+          </ul>
+          <!-- portfolio List -->
           <ul>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Banking App Interface Concept.jpg" alt="Banking App Interface Concept" width="360"
                 height="300">
-                <h3>Banking App Interface Concept</h3>
-                <p>App</p>
+                <h3 class="section-subtitle">Banking App Interface Concept</h3>
+                <p class="section-text">App</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Cashless Payment.jpg" alt="Cashless Payment" width="360"
                 height="300">
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+                <h3 class="section-subtitle">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Meditaion App.jpg" alt="Meditaion App" width="360"
                 height="300">
-                <h3>Meditaion App</h3>
-                <p>App</p>
+                <h3 class="section-subtitle">Meditaion App</h3>
+                <p class="section-text">App</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Taxi Service.jpg" alt="Taxi Service" width="360"
                 height="300">
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+                <h3 class="section-subtitle">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Screen Illustrations.jpg" alt="Screen Illustrations" width="360"
                 height="300">
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
+                <h3 class="section-subtitle">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Online Courses.jpg" alt="Online Courses" width="360"
                 height="300">
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+                <h3 class="section-subtitle">Online Courses</h3>
+                <p class="section-text">Marketing</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Instagram Stories Concept.jpg" alt="Instagram Stories Concept" width="360"
                 height="300">
-                <h3>Instagram Stories Concept</h3>
-                <p>Design</p>
+                <h3 class="section-subtitle">Instagram Stories Concept</h3>
+                <p class="section-text">Design</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Organic Food.jpg" alt="Organic Food" width="360"
                 height="300">
-                <h3>Organic Food</h3>
-                <p>Web Site</p>
+                <h3 class="section-subtitle">Organic Food</h3>
+                <p class="section-text">Web Site</p>
               </a>
             </li>
             <li>
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Fresh Coffee.jpg" alt="Fresh Coffee" width="360"
                 height="300">
-                <h3>Fresh Coffee</h3>
-                <p>Web Site</p>
+                <h3 class="section-subtitle">Fresh Coffee</h3>
+                <p class="section-text">Web Site</p>
               </a>
             </li>
           </ul>
@@ -155,7 +155,7 @@
         <a href="./index.html" class="logo">
           <span class="color-logo">Web</span>Studio
         </a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
          marketing & growth solutions.
       </p>
