changed link in header(portfolio)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <span class="color-logo">Web</span>Studio
         </a>
         <ul>
-          <!--FooterNavigation-->
+          <!--Header Navigation-->
           <li class="footer-link">
             <a href="./index.html">
               Studio
