--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
             <ul>
               <!--FooterNavigation-->
               <li class="footer-link">
-                <a href="./portfolio.html">
+                <a href="./index.html">
                   Studio
                 </a>
               </li>
