--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         </a>
         <ul>
           <!--Header Navigation-->
-          <li class="footer-link">
-            <a href="./index.html">
+          <li class="header-link-item">
+            <a href="./index.html" class="link-nav">
               Studio
             </a>
           </li>
-          <li class="footer-link">
-            <a href="./portfolio.html">
+          <li class="header-link-item">
+            <a href="./portfolio.html" class="link-nav">
               Portfolio
             </a>
           </li>
-          <li class="footer-link">
-            <a href="./index.html">
+          <li class="header-link-item">
+            <a href="./index.html" class="link-nav">
               Contacts
             </a>
           </li>
@@ -55,7 +55,7 @@
     <main>
       <!-- Section1 -->
       <section class="banner">
-        <h1 class="title">Effective Solutions for Your Business</h1>
+        <h1 class="banner-title">Effective Solutions for Your Business</h1>
         <button type="button" class="mainpage-button">Order Service</button>
       </section>
         <!--Bloc of Benefits--> 
