--- a/portfolio.html
+++ b/portfolio.html
@@ -20,18 +20,18 @@
             </a>
             <ul>
               <!--FooterNavigation-->
-              <li class="footer-link">
-                <a href="./index.html">
+              <li class="header-link-item">
+                <a href="./index.html" class="link-nav">
                   Studio
                 </a>
               </li>
-              <li class="footer-link">
-                <a href="./portfolio.html">
+              <li class="header-link-item">
+                <a href="./portfolio.html" class="link-nav">
                   Portfolio
                 </a>
               </li>
-              <li class="footer-link">
-                <a href="./portfolio.html">
+              <li class="header-link-item">
+                <a href="./portfolio.html" class="link-nav">
                   Contacts
                 </a>
               </li>
@@ -57,6 +57,7 @@
     <main>
       <section>
           <!-- list of nav.buttoms -->
+          <!-- <h1> Selection button's -->
           <ul>
             <li>
               <button type="button" class="selection-button">All</button>
@@ -80,7 +81,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Banking App Interface Concept.jpg" alt="Banking App Interface Concept" width="360"
                 height="300">
-                <h3 class="section-subtitle">Banking App Interface Concept</h3>
+                <h1 class="section-subtitle">Banking App Interface Concept</h1>
                 <p class="section-text">App</p>
               </a>
             </li>
@@ -88,7 +89,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Cashless Payment.jpg" alt="Cashless Payment" width="360"
                 height="300">
-                <h3 class="section-subtitle">Cashless Payment</h3>
+                <h1 class="section-subtitle">Cashless Payment</h1>
                 <p class="section-text">Marketing</p>
               </a>
             </li>
@@ -96,7 +97,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Meditaion App.jpg" alt="Meditaion App" width="360"
                 height="300">
-                <h3 class="section-subtitle">Meditaion App</h3>
+                <h1 class="section-subtitle">Meditaion App</h1>
                 <p class="section-text">App</p>
               </a>
             </li>
@@ -104,7 +105,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Taxi Service.jpg" alt="Taxi Service" width="360"
                 height="300">
-                <h3 class="section-subtitle">Taxi Service</h3>
+                <h1 class="section-subtitle">Taxi Service</h1>
                 <p class="section-text">Marketing</p>
               </a>
             </li>
@@ -112,7 +113,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Screen Illustrations.jpg" alt="Screen Illustrations" width="360"
                 height="300">
-                <h3 class="section-subtitle">Screen Illustrations</h3>
+                <h1 class="section-subtitle">Screen Illustrations</h1>
                 <p class="section-text">Design</p>
               </a>
             </li>
@@ -120,7 +121,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Online Courses.jpg" alt="Online Courses" width="360"
                 height="300">
-                <h3 class="section-subtitle">Online Courses</h3>
+                <h1 class="section-subtitle">Online Courses</h1>
                 <p class="section-text">Marketing</p>
               </a>
             </li>
@@ -128,7 +129,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Instagram Stories Concept.jpg" alt="Instagram Stories Concept" width="360"
                 height="300">
-                <h3 class="section-subtitle">Instagram Stories Concept</h3>
+                <h1 class="section-subtitle">Instagram Stories Concept</h1>
                 <p class="section-text">Design</p>
               </a>
             </li>
@@ -136,7 +137,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Organic Food.jpg" alt="Organic Food" width="360"
                 height="300">
-                <h3 class="section-subtitle">Organic Food</h3>
+                <h1 class="section-subtitle">Organic Food</h1>
                 <p class="section-text">Web Site</p>
               </a>
             </li>
@@ -144,7 +145,7 @@
               <a href="./portfolio.html">
                 <img src=".//images/images_portfolio/Fresh Coffee.jpg" alt="Fresh Coffee" width="360"
                 height="300">
-                <h3 class="section-subtitle">Fresh Coffee</h3>
+                <h1 class="section-subtitle">Fresh Coffee</h1>
                 <p class="section-text">Web Site</p>
               </a>
             </li>
